--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -37,7 +37,7 @@
                             <div class="clearfix"></div>
                             <hr>
                             <ul class="media-list">
-                                <li class="media" *ngFor="let comment of comments?.reverse(); let i = index">
+                                <li class="media" *ngFor="let comment of comments; let i = index">
                                     <a href="#" class="pull-left">
                                         <img src="https://bootdey.com/img/Content/user_1.jpg" alt=""
                                             class="rounded-circle">
@@ -72,7 +72,7 @@
                                     </div>
                                     <div>
                                         <ul class="media-list">
-                                            <li class="media" *ngFor="let reply of comment.replies?.reverse()">
+                                            <li class="media" *ngFor="let reply of comment.replies">
                                                 <a href="#" class="pull-left">
                                                     <img src="https://bootdey.com/img/Content/user_1.jpg" alt=""
                                                         class="rounded-circle">
