--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -44,7 +44,7 @@
                                     </a>
                                     <div class="media-body">
                                         <span class="text-muted pull-right">
-                                            <small class="text-muted">{{comment.commentDate|date:'medium'}}
+                                            <small class="text-muted">{{comment.commentDate|date:'medium':'GMT+14'}}
                                                 ({{comment.commentDate |dateAgo}})</small>
                                         </span>
                                         <strong class="text-success">{{comment.emailId}} &nbsp;&nbsp;&nbsp;
@@ -79,7 +79,8 @@
                                                 </a>
                                                 <div class="media-body">
                                                     <span class="text-muted pull-right">
-                                                        <small class="text-muted">{{reply.replyDate|date:'medium'}}
+                                                        <small
+                                                            class="text-muted">{{reply.replyDate|date:'medium':'GMT'}}
                                                             ({{reply.replyDate |dateAgo}})</small>
                                                     </span>
                                                     <strong class="text-success">{{reply.email}}</strong>
