--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -19,6 +19,11 @@
                                         formControlName="description" required="required">
                                 </div>
                                 <div class="form-group">
+                                    <label for="description">Image Url</label>
+                                    <input id="imageUrl" name="imageUrl" type="text" class="form-control"
+                                        formControlName="imageUrl">
+                                </div>
+                                <div class="form-group">
                                     <label for="expiryDate">Expiry Date</label>
                                     <input id="expiryDate" name="expiryDate" type="date" class="form-control"
                                         formControlName="expiryDate" required="required">
