--- a/src/app/components/productinfo/productinfo.component.html
+++ b/src/app/components/productinfo/productinfo.component.html
@@ -1,7 +1,13 @@
 <div class="row product-list">
     <section class="panel">
         <div class="pro-img-box">
-            <img src="http://thevectorlab.net/flatlab/img/product-list/pro3.jpg" alt="">
+
+
+
+
+            <img *ngIf="product.imageUrl!='default.png'" src="{{product.imageUrl}}" alt="">
+            <img *ngIf="product.imageUrl=='default.png'" src="./assets/images/noimage.png">
+
             <span href="#" class="adtocart" (click)="addToCart(product.id,product.name,product.unitPrice,1)">
                 <i class="fa fa-shopping-cart"></i>
             </span>
