--- a/src/app/components/adduser/adduser.component.html
+++ b/src/app/components/adduser/adduser.component.html
@@ -28,14 +28,14 @@
                                 <span
                                     *ngIf="!createAcc.get('address').valid && createAcc.get('address').value !='' ">error</span>
                             </div>
-                            <div class="form-group">
-                                <!-- <label for="quantityInStock">Role</label> -->
+                            <!-- <div class="form-group">
+                                
                                 <select id="role" name="role" class="form-control" required="required" multiple
                                     formControlName="roles">
                                     <option value="ADMIN">ADMIN</option>
                                     <option value="USER">USER</option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div style="float:right;">
                                 <button id="btnReset" type="reset" class="btn btn-outline-info"
                                     style="margin-right: 2em;">Reset</button>
