--- a/src/app/components/productinfo/productinfo.component.css
+++ b/src/app/components/productinfo/productinfo.component.css
@@ -61,13 +61,15 @@ body{margin-top:20px;
     }
     
     .product-list img{
-        width: 100%;
+        height: 200px;
+        width: 200px;
         border-radius: 4px 4px 0 0;
         -webkit-border-radius: 4px 4px 0 0;
     }
     
     .product-list .pro-img-box {
         position: relative;
+      
     }
     .adtocart {
         background: #fc5959;
@@ -79,7 +81,7 @@ body{margin-top:20px;
         display: inline-block;
         text-align: center;
         border: 3px solid #fff;
-        left: 45%;
+        left: 75px;
         bottom: -25px;
         position: absolute;
         cursor: pointer;
