--- a/src/app/components/productdetails/productdetails.component.css
+++ b/src/app/components/productdetails/productdetails.component.css
@@ -1,5 +1,21 @@
 
-
+.rating {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  font-size: 4em; 
+  color: Tomato;
+}
+.rating > span {
+  display: inline-block;
+  position: relative;
+  width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+   color:orange;
+}
 .comment-wrapper .panel-body {
     max-height:650px;
     overflow:auto;
