--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div><a routerLink="/" class="navbar-brand">e-shopping</a></div>
 
@@ -29,4 +29,70 @@
 
     </nav>
 
-</header>
+</header> -->
+
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a routerLink="/" class="navbar-brand">e-shopping</a>
+
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+        <ul class="navbar-nav mr-auto">
+
+
+            <li class="nav-item active">
+                <form class="form-inline my-2 my-md-0">
+                    <input style="width: 450px;" class="form-control" type="text"
+                        placeholder="Search.. This feature is coming soon">
+                    <button class="form-control" type=" submit">Go</button>
+                </form>
+            </li>
+
+        </ul>
+
+
+
+        <!-- <form class="form-inline my-2 my-md-0">
+            <input class="form-control" type="text" placeholder="Search">
+        </form> -->
+    </div>
+
+
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" *ngIf="!loginService.isUserLoggedIn()" routerLink="/login">Login <span
+                    class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" *ngIf="!loginService.isUserLoggedIn()" routerLink="/signup">SignUp</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Prime Members Only</a>
+        </li>
+        <li class="nav-item dropdown">
+
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Welcome {{loginService.getUserName()}}</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" [routerLink]="['/user-profile']">View Profile</a>
+                <a class="dropdown-item" [routerLink]="['/wishlist']">WishList</a>
+                <a class="dropdown-item" [routerLink]="['/order-history']">View Order History</a>
+                <a *ngIf="loginService.isUserLoggedIn()" (click)="logOut()" class="dropdown-item" href="#">Logout
+                </a>
+
+            </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/cart']"><i style="font-size:1.5em;" class="fa fa-shopping-cart"
+                    aria-hidden="true"></i></a>
+        </li>
+
+    </ul>
+
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
+        aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+</nav>
