--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -24,15 +24,20 @@
                         <div class="card-body">
                             <form [formGroup]="addComment" (ngSubmit)="submitForm()">
                                 <textarea id="comment" name="comment" type="text" class="form-control" rows="3"
-                                    formControlName="comment" required placeholder="write a comment..."></textarea>
+                                    formControlName="comment" required
+                                    placeholder="write a comment... And Click Stars to submit"></textarea>
+                                <span *ngIf="!addComment.get('comment').valid" style="color:red">Required Some
+                                    Comments Before Rating</span>
                                 <hr />
-                                <input id="stars" name="stars" type="number" class="form-control"
-                                    formControlName="stars" required="required" placeholder="Rate out of 5">
-                                <br />
-                                <button id="btnSubmit" [disabled]="!addComment.valid" type="submit"
-                                    class="btn btn-info pull-right">Comment</button>
-                                <button id="btnReset" type="reset" class="btn btn-outline-warning pull-right"
-                                    style="margin-right: 2em;">&nbsp;&nbsp;&nbsp;Reset&nbsp;&nbsp;&nbsp;</button>
+                                <div class="rating">
+                                    <span (click)="submitForm(5)"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                    <span (click)="submitForm(4)"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                    <span (click)="submitForm(3)"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                    <span (click)="submitForm(2)"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                    <span (click)="submitForm(1)"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                </div>
+                                <hr />
+
                             </form>
                             <div class="clearfix"></div>
                             <hr>
