--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,9 +41,11 @@
 
             <li class="nav-item active">
                 <form class="form-inline my-2 my-md-0">
-                    <input style="width: 450px;" class="form-control" type="text"
-                        placeholder="Search.. This feature is coming soon">
-                    <button class="form-control" type=" submit">Go</button>
+
+                    <div class="block"><input class="form-control" type="text"
+                            placeholder="Search.. This feature is coming soon">
+                        <button class="form-control" type=" submit">Go</button>
+                    </div>
                 </form>
             </li>
 
