--- a/src/app/components/wishlist/wishlist.component.html
+++ b/src/app/components/wishlist/wishlist.component.html
@@ -3,13 +3,14 @@
     <div *ngIf="cart">
         <table class="table" *ngIf="totalCost!=0; else other_content">
 
-            <th>Name</th>
+            <th>Product</th>
             <th>Unit Price</th>
             <th>Quantity</th>
             <th>Sub-Total</th>
             <tr [hidden]="visibleRowIndex[i] == true" *ngFor="let item of cart.saveForLater; let i=index">
 
-                <td>{{item.name}}</td>
+                <td><a style="text-decoration: none; color:black" [routerLink]="['/productdetails',item.productId]"><img
+                            height="45" width="45" src="{{item.imageUrl}}"> {{item.name}}</a> </td>
                 <td>{{item.unitPrice}}</td>
                 <td>
 
