new added files

--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -21,7 +21,7 @@
                                 <div class="form-group">
                                     <label for="description">Image Url</label>
                                     <input id="imageUrl" name="imageUrl" type="text" class="form-control"
-                                        formControlName="imageUrl">
+                                        placeholder="leave blank if no image url" formControlName="imageUrl">
                                 </div>
                                 <div class="form-group">
                                     <label for="expiryDate">Expiry Date</label>
