--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -40,13 +40,13 @@
 
 
             <li class="nav-item active">
-                <form class="form-inline my-2 my-md-0">
+                <div class="form-inline my-2 my-md-0">
 
-                    <div class="block"><input class="form-control" type="text"
+                    <div class="block"><input [(ngModel)]="searchWord" class="form-control" type="text"
                             placeholder="Search.. This feature is coming soon">
-                        <button class="form-control" type=" submit">Go</button>
+                        <button (click)="makeSearch()" class="form-control" type="submit">Go</button>
                     </div>
-                </form>
+                </div>
             </li>
 
         </ul>
