--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,7 +43,7 @@
                 <div class="form-inline my-2 my-md-0">
 
                     <div class="block"><input [(ngModel)]="searchWord" class="form-control" type="text"
-                            placeholder="Search.. This feature is coming soon">
+                            placeholder="{{placeHolderMsg}}">
                         <button (click)="makeSearch()" class="form-control" type="submit">Go</button>
                     </div>
                 </div>
