cart item count added

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -33,7 +33,7 @@
 
                     <br />
                     <span style="color:coral; cursor:pointer; "
-                        (click)="saveForLater(i,item.productId,item.unitPrice * item.quantity)">save
+                        (click)="saveForLater(i, item.productId, item.unitPrice , item.quantity)">save
                         for
                         later</span>
                     <!-- <span style="color:coral; cursor:pointer; " (click)="visibleRowIndex=i; saveForLater(item.productId)">save for
