--- a/src/app/components/wishlist/wishlist.component.html
+++ b/src/app/components/wishlist/wishlist.component.html
@@ -34,7 +34,7 @@
 
                     <br />
                     <span style="color:coral; cursor:pointer; "
-                        (click)="putBack2Cart(i,item.productId,item.unitPrice * item.quantity)">put back 2
+                        (click)="putBack2Cart(i,item.productId,item.unitPrice , item.quantity)">put back 2
                         cart</span>
 
                 </td>
