--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -23,7 +23,7 @@
                     <ng-template #loaded>
                         <div class="card-body">
                             <form [formGroup]="addComment">
-                                <textarea id="comment" name="comment" type="text" class="form-control" rows="3"
+                                <textarea name="comment" type="text" class="form-control" rows="3"
                                     formControlName="comment" required
                                     placeholder="write a comment... And Click Stars to submit"></textarea>
                                 <span *ngIf="!addComment.get('comment').valid" style="color:red">Required Some
@@ -72,15 +72,14 @@
                                             <br />
                                             <span [hidden]="!hideme[i]">
                                                 <form (ngSubmit)="submitReply(comment.id,i)">
-                                                    <input [(ngModel)]="reply[i]" id="comment" name="comment"
-                                                        type="text" class="form-control" required>
-                                                    <button id="btnReset" type="reset" class="btn btn-outline-info"
+                                                    <input [(ngModel)]="reply[i]" name="comment" type="text"
+                                                        class="form-control" required>
+                                                    <button type="reset" class="btn btn-outline-info"
                                                         style="margin-right: 2em;">Reset</button>
                                                     <span class="btn btn-outline-warning" style="margin-right: 2em;"
                                                         (click)="hideme[i] =!hideme[i]">Cancel</span>
 
-                                                    <button id="btnSubmit" type="submit"
-                                                        class="btn btn-outline-primary">Reply</button>
+                                                    <button type="submit" class="btn btn-outline-primary">Reply</button>
                                                 </form>
                                             </span>
                                         </p>
