--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -13,7 +13,7 @@
         <hr />
         <pagination-controls (pageChange)="pageChange($event)" class="my-pagination"></pagination-controls>
     </div>
-    <button style="width: 100px; height: 40px;" *ngIf="!last" (click)="currentPage=currentPage+1;getProducts()">Even
+    <button style="width: 100px; height: 40px;" *ngIf="!last" (click)="currentPage=currentPage+1;getProducts()">
         More</button>
 
 </div>
