--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,8 +33,12 @@
                     Login
                 </button>
             </div>
+            <div class="text-center">
+                <span style="color:white">OR</span>
+                <button (click)="socialSignIn('google')" class=" google btn">
+                    <span class="fa fa-google"></span> Sign in with Google</button>
 
-
+            </div>
         </form>
     </div>
 </div>
