--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -69,6 +69,12 @@
         </li>
         <li class="nav-item">
             <a class="nav-link disabled" href="#">Prime Members Only</a>
+
+        </li>
+        <li>
+            <span style="position:relative; display: inline-block;top:5px;">
+                <img width="30" height="30" src="./assets/images/noimage.png" alt="profile-pic" />
+            </span>
         </li>
         <li class="nav-item dropdown">
 
