--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,10 +10,25 @@
     padding: 0px; 
     box-sizing: border-box;
 }
-body, html {
-    height: 100%;
-    font-family: Poppins-Regular, sans-serif;
+
+.google {
+  background-color: #dd4b39;
+  color: white;
 }
+
+.btn {
+width: 100%;
+padding: 12px;
+border: none;
+border-radius: 4px;
+margin: 5px 0;
+opacity: 0.85;
+display: inline-block;
+font-size: 17px;
+line-height: 20px;
+text-decoration: none; /* remove underline from anchors */
+}
+
 /*---------------------------------------------*/
 a {
     font-family: Poppins-Regular;
@@ -275,7 +290,7 @@ iframe {
   transition: all 0.4s;
 }
 .login100-form-btn:hover {
-  background: #333333;
+  background: blueviolet;
 }
 /*------------------------------------------------------------------
 [ Responsive ]*/
