--- a/src/app/components/myorderhistory/myorderhistory.component.html
+++ b/src/app/components/myorderhistory/myorderhistory.component.html
@@ -23,16 +23,25 @@
             <tr *ngFor="let order of orderhistory; let i=index">
                 <td>{{i+1}}</td>
                 <td>
+                    <table class="table">
+                        <th>Item</th>
+                        <th>Units</th>
 
-                    <span *ngFor="let product of order.productsOrdered; let i=index">
-                        <span style="width: auto;  margin: 5px;">
-                            <a [routerLink]="['/productdetails',product.productId]"><img width="40" height="40"
-                                    src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}">
-                            </a>
-                            &times; {{product.quantity}}
-                        </span>
-                        <br *ngIf="(i+1)%3==0" />
-                    </span>
+                        <tr *ngFor="let product of order.productsOrdered">
+                            <td>
+                                <span style="width: auto;  margin: 5px;">
+                                    <a [routerLink]="['/productdetails',product.productId]"><img width="40" height="40"
+                                            src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}">
+                                    </a>
+
+                                </span>
+                            </td>
+                            <td>
+                                {{product.quantity}}
+                            </td>
+                            <br *ngIf="(i+1)%3==0" />
+                        </tr>
+                    </table>
 
 
 
