--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,9 +34,12 @@
                 </button>
             </div>
             <div class="text-center">
+                <br />
                 <span style="color:white">OR</span>
-                <button (click)="socialSignIn('google')" class=" google btn">
-                    <span class="fa fa-google"></span> Sign in with Google</button>
+                <div class="container-login100-form-btn">
+                    <button (click)="socialSignIn('google')" class=" google btn">
+                        <span class="fa fa-google"></span> Sign in with Google</button>
+                </div>
 
             </div>
         </form>
